<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="268dp"
        android:layout_height="594dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116">

        <Space
            android:layout_width="match_parent"
            android:layout_height="102dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            app:srcCompat="@drawable/cdmx" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/transporte_publico_cdmx"
                android:textColor="#ed008c"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/iniciar_sesi_n_como"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/conductor"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#ed008c"
                android:onClick="driver"
                android:text="@string/Conductor"
                android:textColor="#FDFEFE" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center">

            <Button
                android:id="@+id/usuario"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#ed008c"
                android:onClick="usuario"
                android:text="@string/Usuario"
                android:textColor="#FDFEFE" />
        </TableRow>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>